added transactions html

--- a/ui/templates/accounts.html
+++ b/ui/templates/accounts.html
@@ -6,6 +6,12 @@
 	Accounts list
 {% endblock %}
 
+{% block header %}
+<div class="page-header">
+    <h3>Accounts list</h3>
+</div>
+{% endblock %}
+
 {% block content %}
 
 <table class="table table-striped">
