--- a/ui/templates/account_details.html
+++ b/ui/templates/account_details.html
@@ -46,7 +46,7 @@
         </tr>
     </thead>
     <tbody>
-    {% for transaction in account.source.all %}
+    {% for transaction in transactions %}
     <tr>
 	<td>{{ transaction.id }}</td>
 	<td>{{ transaction.amount }}</td>
@@ -58,7 +58,9 @@
     {% endfor %}
     <tbody>
 </table>
-
+</div>
+<div align="center">
+{% bootstrap_pagination transactions  url="transactions" size="small" %}
 </div>
 
 {% endblock %}
